# Algorithm-and-Data-Structure

./: CMakeLists.txt  README.md
C++/: CMakeLists.txt  ListNodes.cpp  allCombination.cpp  allPermutation.cpp
C++/Computational_Geometry/: Convex.cpp
C++/SegmentTree/: SegT.h
C++/Sorting/: Sorting.h  main.cpp  merge.cpp
C++/Tree/: AVLTree.cpp  BST.cpp  BinaryTree.cpp
C++/lazy-heap/: LazyHeap.cpp
C++/minimum_support_tree/: kruskal.cpp  prim.cpp
C++/pattern_matching/: kmp.cpp
C++/shortest_path/: dijkstra.cpp  floyd.cpp
C++/sparse-table/: ST.cpp
C++/union_find/: UF.cpp  UF.h
Fortran/: CMakeLists.txt
Fortran/union_find/: union_find.f90
Go/: BST.go  CMakeLists.txt  ListNode.go  Logging.go  Tree.go
Lua/: CMakeLists.txt
Lua/union_find/: uf.lua
Python/: CMakeLists.txt
Python/lazy-heap/: LazyHeap.py
Python/minimum_support_tree/: kruskal.py  prim.py
Python/pattern_matching/: kmp.py
Python/segment-tree/: SegT.py
Python/shortest_path/: dijkstra.py  floyd.py
Python/sparse-table/: ST.py
Python/union_find/: uf.py
